--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@q4/stratus-testrail-reporter",
-  "version": "1.0.0",
+  "version": "1.3.0",
   "description": "A custom Github Action that consumes Stratus test reports to create and execute TestRail runs",
   "main": "dist/index.js",
   "engines": {
@@ -12,18 +12,18 @@
     "all": "npm run build && npm run package"
   },
   "dependencies": {
-    "@actions/core": "^1.4.0",
-    "@actions/github": "^4.0.0",
-    "lodash": "^4.17.21",
-    "moment-timezone": "^0.5.33",
-    "testrail-api": "^1.3.6",
-    "typescript": "^4.3.5"
+    "@actions/core": "^1.6.x",
+    "@actions/github": "^5.0.x",
+    "lodash": "^4.17.x",
+    "moment-timezone": "^0.5.x",
+    "testrail-api": "^1.3.x",
+    "typescript": "^4.5.x"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.177",
-    "@types/node": "^13.7.1",
-    "@types/request": "^2.48.7",
+    "@types/lodash": "^4.14.178",
+    "@types/node": "^13.13.52",
+    "@types/request": "^2.48.8",
     "@vercel/ncc": "^0.29.0",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.5.0"
   }
 }
