--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
       "noImplicitAny": true,
       "esModuleInterop": true
     },
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "jest.config.js", "**/*.test.ts"]
   }
