--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "node": "12.14.1"
   },
   "scripts": {
+    "test": "jest --watchAll=true",
+    "test:build": "jest",
     "build": "tsc",
     "package": "ncc build --source-map",
-    "all": "npm run build && npm run package"
+    "all": "npm run test:build && npm run build && npm run package"
   },
   "dependencies": {
     "@actions/core": "^1.6.x",
@@ -20,10 +22,13 @@
     "typescript": "^4.5.x"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.6",
     "@types/lodash": "^4.14.178",
     "@types/node": "^13.13.52",
     "@types/request": "^2.48.8",
     "@vercel/ncc": "^0.29.0",
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.7",
     "ts-node": "^10.5.0"
   }
 }
