GROOT-3245 - include automated test results in regression

--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,9 @@ inputs:
   target_branch:
     required: false
     description: Used to determine whether or not to leverage milestones to track regression
+  regression_branch_branch:
+    required: false
+    description: Used to determine whether or not to leverage milestones to track regression
   network_url:
     required: true
     description: The Testrail account domain name
