--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
   "name": "@q4/stratus-testrail-reporter",
-  "version": "1.7.0",
+  "version": "2.0.0",
   "description": "A custom Github Action that consumes Stratus test reports to create and execute TestRail runs",
   "main": "dist/index.js",
   "engines": {
-    "node": "12.14.1"
+    "node": ">=16"
   },
   "scripts": {
     "test": "jest --watchAll=true",
-    "test:build": "jest",
+    "test:build": "./node_modules/.bin/jest",
     "build": "tsc",
     "package": "ncc build --source-map",
     "all": "npm run test:build && npm run build && npm run package"
   },
   "dependencies": {
-    "@actions/core": "^1.6.x",
+    "@actions/core": "^1.9.x",
     "@actions/github": "^5.0.x",
     "lodash": "^4.17.x",
     "moment-timezone": "^0.5.x",
     "testrail-api": "^1.3.x",
-    "typescript": "^4.5.x"
+    "typescript": "^4.8.x"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.6",
+    "@types/jest": "^29.0.3",
     "@types/lodash": "^4.14.178",
-    "@types/node": "^13.13.52",
+    "@types/node": "^16.11.56",
     "@types/request": "^2.48.8",
-    "@vercel/ncc": "^0.29.0",
-    "jest": "^28.1.3",
-    "ts-jest": "^28.0.7",
+    "@vercel/ncc": "^0.34.0",
+    "jest": "^29.0.3",
+    "ts-jest": "^29.0.2",
     "ts-node": "^10.5.0"
   }
 }
