--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@q4/stratus-testrail-reporter",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "A custom Github Action that consumes Stratus test reports to create and execute TestRail runs",
   "main": "dist/index.js",
   "engines": {
@@ -14,8 +14,8 @@
     "all": "npm run test:build && npm run build && npm run package"
   },
   "dependencies": {
-    "@actions/core": "^1.9.x",
-    "@actions/github": "^5.0.x",
+    "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.1",
     "lodash": "^4.17.x",
     "moment-timezone": "^0.5.x",
     "testrail-api": "^1.3.x",
