--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:build": "./node_modules/.bin/jest",
     "build": "tsc",
     "package": "ncc build --source-map",
-    "all": "npm run test:build && npm run build && npm run package"
+    "all": "npm run test:build && npm run build && npm run package",
+    "start": "npm run build && "
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
@@ -28,6 +29,7 @@
     "@types/request": "^2.48.8",
     "@vercel/ncc": "^0.34.0",
     "jest": "^29.0.3",
+    "prettier": "^2.8.4",
     "ts-jest": "^29.0.2",
     "ts-node": "^10.5.0"
   }
