--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@q4/stratus-testrail-reporter",
-  "version": "2.1.1",
+  "version": "3.0.0",
   "description": "A custom Github Action that consumes Stratus test reports to create and execute TestRail runs",
   "main": "dist/index.js",
   "engines": {
@@ -11,7 +11,8 @@
     "test:build": "./node_modules/.bin/jest",
     "build": "tsc",
     "package": "ncc build --source-map",
-    "all": "npm run test:build && npm run build && npm run package"
+    "all": "npm run build && npm run package",
+    "start": "npm run build && "
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
@@ -28,6 +29,7 @@
     "@types/request": "^2.48.8",
     "@vercel/ncc": "^0.34.0",
     "jest": "^29.0.3",
+    "prettier": "^2.8.4",
     "ts-jest": "^29.0.2",
     "ts-node": "^10.5.0"
   }
