--- a/action.yml
+++ b/action.yml
@@ -28,7 +28,7 @@ inputs:
     default: ''
   report_results:
     required: false
-    description: The suite ID of the Testrail project
+    description: A boolean to report results to the presenter
     default: 'true'
   action_ref:
     required: true
@@ -42,6 +42,10 @@ runs:
         text: ${{ github.event.pull_request.title || github.event.head_commit.message }}
         regex: '(?<=(feat|fix|docs|style|refactor|perf|test|chore)\()[^)]+(?=\))'
         flags: gm
+
+    - name: checkout
+      shell: bash
+      run: echo '${{ github.action_ref }}'
 
     - name: checkout
       uses: actions/checkout@v3.0.2
