--- a/action.yml
+++ b/action.yml
@@ -55,6 +55,12 @@ runs:
         path: ./.github/actions/stratus-testrail-reporter
         ref: ${{ inputs.action_ref }}
 
+    - name: Get branch name
+      id: branch_name
+      shell: bash
+      run: |
+        echo $(git symbolic-ref --short HEAD)
+
     - uses: ./.github/actions/stratus-testrail-reporter/main
       id: report
       env:
