--- a/action.yml
+++ b/action.yml
@@ -60,6 +60,8 @@ runs:
       shell: bash
       run: |
         echo $(git symbolic-ref --short HEAD)
+        echo '${{ github.action_ref }}'
+        echo '${{ github.action_repository }}'
 
     - uses: ./.github/actions/stratus-testrail-reporter/main
       id: report
