--- a/action.yml
+++ b/action.yml
@@ -2,27 +2,75 @@ name: "Stratus Testrail Reporter"
 description: "Stratus Testrail Reporter"
 author: "Q4Inc"
 inputs:
-  jira_key:
-    required: false
-    description: Used in trunk-based development flow. This key is used to synchronize milestones and test runs with the feature.
   regression_mode:
     required: false
     description: Used in git development flow. This will determine whether or not to leverage milestones to track regression
   network_url:
-    required: true
+    required: false
     description: The Testrail account domain name
+    default: "https://q4web.testrail.com"
   username:
-    required: true
+    required: false
     description: The username associated with the test runner
+    default: "app@q4inc.com"
   api_key:
     required: true
     description: The API key associated with the username
   project_id:
-    required: true
+    required: false
     description: The project ID of the Testrail project
   suite_id:
-    required: true
+    required: false
     description: The suite ID of the Testrail project
+  current_branch:
+    required: false
+    description: Used to determine the related tests, e.g., QP-XXX
+    default: ''
+  report_results:
+    required: false
+    description: A boolean to report results to the presenter
+    default: 'true'
+outputs:
+  test_runs:
+    value: ${{ steps.report.outputs.test_runs }}
+    description: The result of the test runs
+
 runs:
-  using: "node16"
-  main: "dist/index.js"
+  using: "composite"
+  steps:
+    - id: jira-key-match
+      uses: actions-ecosystem/action-regex-match@v2.0.2
+      with:
+        text: ${{ github.event.pull_request.title || github.event.head_commit.message }}
+        regex: '(?<=(feat|fix|docs|style|refactor|perf|test|chore)\()[^)]+(?=\))'
+        flags: gm
+
+    - name: checkout
+      uses: actions/checkout@v3.0.2
+      with:
+        repository: q4mobile/stratus-testrail-reporter
+        path: ./.github/actions/stratus-testrail-reporter
+        ref: v10
+
+    - uses: ./.github/actions/stratus-testrail-reporter/main
+      id: report
+      env:
+        NODE_ENV: ${{ env.node_env }}
+      with:
+        regression_mode: ${{ inputs.regression_mode }}
+        network_url: ${{ inputs.network_url }}
+        username: ${{ inputs.username }}
+        api_key: ${{ inputs.api_key }}
+        project_id: ${{ inputs.project_id }}
+        suite_id: ${{ inputs.suite_id }}
+        jira_key: ${{ steps.jira-key-match.outputs.match }}
+
+    - if: inputs.report_results == 'true'
+      id: result
+      uses: q4mobile/stratus-testrail-presenter@main
+      with:
+        api_key: ${{ inputs.api_key }}
+        network_url: ${{ inputs.network_url }}
+        test_runs: ${{ steps.report.outputs.test_runs }}
+        username: ${{ inputs.username }}
+        current_branch: ${{ inputs.current_branch }}
