--- a/action.yml
+++ b/action.yml
@@ -25,11 +25,11 @@ inputs:
   current_branch:
     required: false
     description: Used to determine the related tests, e.g., QP-XXX
-    default: ''
+    default: ""
   report_results:
     required: false
     description: A boolean to report results to the presenter
-    default: 'true'
+    default: false
 outputs:
   test_runs:
     value: ${{ steps.report.outputs.test_runs }}
@@ -46,7 +46,7 @@ runs:
         flags: gm
 
     - name: checkout
-      uses: actions/checkout@v3.0.2
+      uses: actions/checkout@v3.5.2
       with:
         repository: q4mobile/stratus-testrail-reporter
         path: ./.github/actions/stratus-testrail-reporter
