--- a/package.json
+++ b/package.json
@@ -8,11 +8,7 @@
   },
   "scripts": {
     "test": "jest --watchAll=true",
-    "test:build": "./node_modules/.bin/jest",
-    "build": "tsc",
-    "package": "ncc build --source-map",
-    "all": "npm run build && npm run package",
-    "start": "npm run build && "
+    "build": "ncc build --minify"
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
