--- a/action.yml
+++ b/action.yml
@@ -26,8 +26,8 @@ inputs:
     required: false
     description: A boolean to report results to the presenter
     default: "false"
-  exclude_e2e:
-    description: Used in projects that don't require nightwatch testing like in EDS. When true will close milestones regardless of E2E reports.
+  close_milestone:
+    description: Make sure testrail milestone will get closed after production pipeline is completed.
     required: false
     type: boolean
     default: false
@@ -73,7 +73,7 @@ runs:
         project_id: ${{ inputs.project_id }}
         suite_id: ${{ inputs.suite_id }}
         jira_key: ${{ steps.jira-key-match.outputs.match }}
-        exclude_e2e: ${{ inputs.exclude_e2e }}
+        close_milestone: ${{ inputs.close_milestone }}
 
     - if: inputs.report_results == 'true'
       id: result
