--- a/main/action.yml
+++ b/main/action.yml
@@ -23,8 +23,8 @@ inputs:
   suite_id:
     required: false
     description: The suite ID of the Testrail project
-  exclude_e2e:
-    description: Used in projects that don't require nightwatch testing like in EDS. When true will close milestones regardless of E2E reports.
+  close_milestone:
+    description: Make sure testrail milestone will get closed after production pipeline is completed.
     required: false
     type: boolean
     default: false
