--- a/action.yml
+++ b/action.yml
@@ -59,12 +59,12 @@ runs:
       with:
         repository: q4mobile/stratus-testrail-reporter
         path: ./.github/actions/stratus-testrail-reporter
-        ref: v12.2
+        ref: v12.3
 
     - uses: ./.github/actions/stratus-testrail-reporter/main
       id: report
       env:
-        NODE_ENV: ${{ env.node_env }}
+        NODE_ENV: ${{ env.NODE_ENV }}
       with:
         regression_mode: ${{ inputs.regression_mode }}
         network_url: ${{ inputs.network_url }}
