--- a/action.yml
+++ b/action.yml
@@ -59,7 +59,7 @@ runs:
       with:
         repository: q4mobile/stratus-testrail-reporter
         path: ./.github/actions/stratus-testrail-reporter
-        ref: test-close-milestone
+        ref: v12.2
 
     - uses: ./.github/actions/stratus-testrail-reporter/main
       id: report
