--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "jest --watchAll=true",
-    "build": "ncc build --minify",
+    "build": "ncc build src/index.ts -o dist --minify",
     "all": "npm run build"
   },
   "dependencies": {
