--- a/action.yml
+++ b/action.yml
@@ -59,7 +59,7 @@ runs:
       with:
         repository: q4mobile/stratus-testrail-reporter
         path: ./.github/actions/stratus-testrail-reporter
-        ref: v13.0
+        ref: SBR-1980
 
     - uses: ./.github/actions/stratus-testrail-reporter/main
       id: report
